fix z-indexes variables

--- a/static/css/components/search-result-item.less
+++ b/static/css/components/search-result-item.less
@@ -5,11 +5,13 @@
 @import "buttonBtn.less";
 @import "buttonCta.less";
 
+
+
 .bookauthor {
   font-family: @lucida_sans_serif-6;
 }
 
-.searchResultItem {
+.searchResultItem{
   list-style-type: none;
   line-height: 1.5em;
   background-color: @grey-fafafa;
@@ -127,7 +129,7 @@
 }
 
 .preview-covers img:hover {
-  z-index: 4;
+  z-index: @z-index-level-4;
 }
 
 // Delete trashcan appears on https://openlibrary.org/people/jdlrobson/lists
@@ -179,23 +181,24 @@
 }
 
 // For book covers images
+
 .preview-covers-img-0 {
   margin-left: 0;
   position: relative;
-  z-index: 4;
+  z-index: @z-index-level-4;
 }
 .preview-covers-img-1 {
   margin-left: -20px;
   position: relative;
-  z-index: 3;
+  z-index: @z-index-level-3;
 }
 .preview-covers-img-2 {
   margin-left: -20px;
   position: relative;
-  z-index: 2;
+  z-index: @z-index-level-2;
 }
 .preview-covers-img-3 {
   margin-left: -20px;
   position: relative;
-  z-index: 1;
+  z-index: @z-index-level-1;
 }
